# reticle

./: .gitignore  LICENSE  README.md  main.py  pyproject.toml
src/reticle/: __init__.py
src/reticle/agent/: __init__.py  events.py  loop.py
src/reticle/agent/tools/: __init__.py  base.py
src/reticle/llm/: __init__.py  anthropic.py  base.py  gemini.py  openai.py  pricing.py  qwen.py  rate_limiter.py  routing.py
src/reticle/tools/: __init__.py  grid.py  image.py  plot_points.py
